[package]
name = "sunday-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = { version = "0.4.35", features = ["serde"] }
log = "0.4.27"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "stream", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8"
url = "2.5.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
